--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -267,7 +267,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="resend_verification_code">Erneut senden</string>
     <string name="enter_verification_code">Verifizierungs-Code eingeben</string>
     <string name="verify">Verifizieren</string>
-    <string name="reply_prefix_on">An</string>
+    <string name="reply_prefix_on">Am</string>
     <string name="create_new_account">Erstelle einen neuen Account</string>
     <string name="setup_new_account">Richten Sie Ihr Konto ein</string>
     <string name="create_account">Account erstellen</string>
@@ -429,7 +429,7 @@ das Anmeldepasswort zurückzusetzen, sollten Sie es vergessen haben.</string>
     <string name="processing_attachment">Anhänge werden verarbeitet</string>
     <string name="hyperlink_confirmation_dialog_text_html">Nun wird Ihr Browser geöffnet und leitet Sie weiter
 zu: &lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt; Möchten Sie fortfahren?</string>
-    <string name="hyperlink_confirmation_checkbox_text">Nicht erneut nachfragen</string>
+    <string name="dont_ask_again">Nicht erneut nachfragen</string>
     <string name="none">Keine</string>
     <string name="changes_affected_after_closing">Änderungen werden nach dem Neustart der App wirksam</string>
     <plurals name="incorrect_pin_remaining_attempts">
