--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -423,7 +423,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="sync_attachments">添付ファイルを同期しています...</string>
     <string name="processing_attachment">添付ファイルの処理中</string>
     <string name="hyperlink_confirmation_dialog_text_html">ウェブブラウザを使用して次のURLを開こうとしています：&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;続行してよろしいですか？</string>
-    <string name="hyperlink_confirmation_checkbox_text">今後表示しない</string>
+    <string name="dont_ask_again">今後表示しない</string>
     <string name="none">なし</string>
     <string name="changes_affected_after_closing">アプリを閉じた後に変更が反映されます。</string>
     <plurals name="incorrect_pin_remaining_attempts">
@@ -794,7 +794,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <!-- External message that was encrypted by the BE -->
     <string name="sender_lock_sent_end_to_end">端末相互間の暗号化による送信</string>
     <!-- External message that was encrypted by the BE -->
-    <string name="sender_lock_sent_autoresponder">ProtonMailによってゼロアクセス暗号化で送信済み</string>
+    <string name="sender_lock_sent_autoresponder">ProtonMail によって送信された、ゼロアクセス暗号化されたメッセージ</string>
     <string name="sender_lock_verification_failed">送信者検証の失敗</string>
     <string name="sender_lock_pgp_encrypted">PGPで暗号化されたメッセージ（署名なし）</string>
     <string name="sender_lock_pgp_verified">検証済みアドレスからのPGP署名付きメッセージ（暗号化なし）</string>
