--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -428,7 +428,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="sync_attachments">正在同步附件</string>
     <string name="processing_attachment">正在處理附件</string>
     <string name="hyperlink_confirmation_dialog_text_html">您即將啟動網頁瀏覽器並導航到:&lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;您想繼續嗎？</string>
-    <string name="hyperlink_confirmation_checkbox_text">不要再詢問</string>
+    <string name="dont_ask_again">不要再詢問</string>
     <string name="none">無</string>
     <string name="changes_affected_after_closing">變更會在關閉應用程式後起作用</string>
     <plurals name="incorrect_pin_remaining_attempts">
